--- a/css/screen.css
+++ b/css/screen.css
@@ -7,3 +7,14 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* stylelint-enable */
 
 /* Begin site styles below */
+
+html{
+  font-size :12px;
+  line-height: 28px;
+  font-family: "Helvetica Neue", Helvetica, arial;
+}
+body{
+  background-color: blockquote;
+  font-family: arial;
+  font-size: 14px;
+}
